--- a/website/src/components/live-demo/styles.module.css
+++ b/website/src/components/live-demo/styles.module.css
@@ -2,8 +2,34 @@
 
 .picker {
   padding-left: 30px;
+  padding-right: 30px;
   padding-bottom: 5px;
   white-space: nowrap;
+}
+
+.exampleIcon {
+  width: 18px;
+  height: 18px;
+  vertical-align: middle;
+  display: inline-block;
+  margin-right: 3px;
+  margin-left: 3px;
+}
+
+.exampleTag {
+  background-color: gainsboro;
+  border-radius: 10px;
+  font-size: 11px;
+  padding: 3px 5px 3px 5px;
+  color: black !important;
+  margin-right: 3px;
+  margin-left: 3px;
+}
+
+.exampleTags {
+  position: absolute;
+  right: 0;
+  padding-right: 20px;
 }
 
 .container {
